# vjoyeventbasic

./: CMakeLists.txt  README.md  main.cpp  readme.md  vjoywrapper.h
nixcl/: CMakeLists.txt  keymap.c  keymap.h  main.c  main.cpp  nixcl.code-workspace
shared/: CMakeLists.txt  crc.h  crc_32.c  ev_xpad.hpp  ev_xpadneo_elite_2.hpp  test.cpp  vjoy_event_net.hpp
shared/dlts_udp/: CMakeLists.txt  dtls_udp.c  readme.md  sock_dlts_udp.c  sock_dlts_udp.h  sock_dtls_udp.c  sock_dtls_udp.h  test_client.c  test_server.c
winsrv/: CMakeLists.txt  FfbMon.h  README.md  boost_config.hpp  ffb.cpp  main.cpp  print_client.cpp  vjoyeventbasic.code-workspace  winsockwrapper.cpp  winsockwrapper.hpp
winsrv/vjoy/inc/: public.h
winsrv/winsockwrapper/: CMakeLists.txt  winsockwrapper.cpp
